--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -100,7 +100,7 @@
     "        self.params = read_yaml(params_filepath)\n",
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
-    "        # 1:24:18\n",
+    "        \n",
     "\n",
     "    def get_data_ingestion_config(self)-> DataIngestionConfig:\n",
     "        config = self.config.data_ingestion\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,8 +150,82 @@
     "        else:\n",
     "            logger.info(f\"file already exists of size: {get_size(Path(self.config.local_data_file))}\")\n",
     "\n",
+    "    \n",
+    "    def extract_zip_file(self):\n",
+    "        \"\"\" zip_file_path: str\n",
+    "        Extracts the zip file into the data directory\n",
+    "        Function returns none\n",
+    "        \"\"\"\n",
+    "        unzip_path = self.config.unzip_dir\n",
+    "        os.makedirs(unzip_path, exist_ok=True)\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(unzip_path)\n",
+    "\n",
+    "\n",
     "            \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-08-12 23:26:04,436: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-08-12 23:26:04,462: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-08-12 23:26:04,496: INFO: common: created directory at: artifacts]\n",
+      "[2024-08-12 23:26:04,521: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-08-12 23:26:10,634: INFO: 254070146: artifacts/data_ingestion/data.zip download with following info: \n",
+      "Connection: close\n",
+      "Content-Length: 11616915\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"adf745abc03891fe493c3be264ec012691fe3fa21d861f35a27edbe6d86a76b1\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: FC45:88AD:3FEC:5136:66BAD24E\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Tue, 13 Aug 2024 03:26:08 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-dfw-kdfw8210035-DFW\n",
+      "X-Cache: MISS\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1723519568.451471,VS0,VE493\n",
+      "Vary: Authorization,Accept-Encoding,Origin\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: a5bfb4ffd998de870704045805587490252feabb\n",
+      "Expires: Tue, 13 Aug 2024 03:31:08 GMT\n",
+      "Source-Age: 0\n",
+      "\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_ingestion_config = config.get_data_ingestion_config()\n",
+    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.download_file()\n",
+    "    data_ingestion.extract_zip_file()\n",
+    "# 1:29:10\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
